# brainwave-basket

Blog Generation/: .gitignore  app.py  pyproject.toml  request.json  requirements.txt
Blog Generation/src/graphs/: graph_builder.py
Blog Generation/src/llms/: groqllm.py
Blog Generation/src/nodes/: blog_node.py  node.py
Blog Generation/src/states/: blog_state.py
Hotel Reservation Prediction/: .gitignore  DockerFile  JenkinsFileSpecificFolder  Jenkinsfile  READme.md  application.py  pyproject.toml  setup.py
Hotel Reservation Prediction/config/: paths_config.py
Hotel Reservation Prediction/custom_jenkins/: Dockerfile
Hotel Reservation Prediction/hotel_reservation_prediction.egg-info/: PKG-INFO  SOURCES.txt
Hotel Reservation Prediction/mlruns/0/: meta.yaml
Hotel Reservation Prediction/mlruns/0/213d330ee8a149c09c35e5726754fed5/: meta.yaml
Hotel Reservation Prediction/mlruns/0/213d330ee8a149c09c35e5726754fed5/metrics/: accuracy  f1  precision  recall
Hotel Reservation Prediction/mlruns/0/5a8dd1789c9b44e0a61bb2275189a9fd/: meta.yaml
Hotel Reservation Prediction/mlruns/0/60c1b896959e4d82903e1aa689fb1825/: meta.yaml
Hotel Reservation Prediction/pipeline/: training_pipeline.py
Hotel Reservation Prediction/src/: custom_exception.py  data_ingestion.py  model_training.py
Hotel Reservation Prediction/src/hotel_reservation_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Hotel Reservation Prediction/static/: style.css
Hotel Reservation Prediction/templates/: index.html
Hotel Reservation Prediction/utils/: common_functions.py
(+45 files in other folders)
