[project]
name = "blog-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-cli[inmem]>=0.0.36",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.4",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
